--- a/watchlist/styles.css
+++ b/watchlist/styles.css
@@ -13,7 +13,7 @@ section {
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url('/dalethmountjoy.github.io/images/movies_background.jpeg')no-repeat;
+    background: url('https://dalethmountjoy.github.io/images/movies_background.jpeg')no-repeat;
     background-position: center;
     background-size: cover;
 }
