--- a/watchlist/styles.css
+++ b/watchlist/styles.css
@@ -13,7 +13,7 @@ section {
     align-items: center;
     min-height: 100vh;
     width: 100%;
-    background: url("images/movies_background.jpeg")no-repeat;
+    background: url("../images/movies_background.jpeg")no-repeat;
     background-position: center;
     background-size: cover;
 }
@@ -99,6 +99,7 @@ table {
     width: 500px;
     background-color: #466368;
     background: radial-gradient(#648880, #293f50);
+    /* try new colors - aquamarine mediumpurple*/
     border-radius: 20px;
     border: 0;
     outline: none;
