--- a/watchlist/styles.css
+++ b/watchlist/styles.css
@@ -34,7 +34,7 @@ section {
 
 .formbox {
     position: relative;
-    width: 350px;
+    width: 400px;
     height: 400px;
     background: transparent;
     border: 2px solid rgba(255, 255, 255, 0.5);
@@ -77,7 +77,7 @@ input:focus~label {
 }
 
 .input-title {
-    padding-bottom: 5px;
+    padding-bottom: none;
 }
 
 .inputbox input {
@@ -103,19 +103,20 @@ button {
     width: 100%;
     height: 40px;
     border-radius: 40px;
-    background-color: #fff;
+    background-color: #466368;
+    background: radial-gradient(#648880, #293f50);
     border: none;
     outline: none;
     cursor: pointer;
     font-size: 1em;
     font-weight: 600;
-    color: black;
+    color: #fff;
     margin-bottom: 15px;
 }
 
 
 table {
-    width: 500px;
+    max-width: 400px;
     background-color: #466368;
     background: radial-gradient(#648880, #293f50);
     /* try new colors - aquamarine mediumpurple*/
