--- a/watchlist/styles.css
+++ b/watchlist/styles.css
@@ -99,7 +99,7 @@ input:focus~label {
     top: 10px;
 }
 
-button {
+button.btn {
     width: 100%;
     height: 40px;
     border-radius: 40px;
@@ -114,6 +114,9 @@ button {
     margin-bottom: 15px;
 }
 
+.btn:hover {
+    transform: scale(110%) rotate(-3deg)
+}
 
 table {
     max-width: 400px;
